--- a/.github/workflows/whatsapp-push-notify-action.yml
+++ b/.github/workflows/whatsapp-push-notify-action.yml
@@ -1,3 +1,18 @@
-- name: Run
-  run: |
-      echo 'Start!'
+name: When a push occurs in the master branch, a private message is sent on the Whatsapp.
+on:
+  push:
+    branches:
+      - main
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: install twilio
+        run: pip install twilio
+      - name: run code
+        run: python main.py
+        env:
+          account_sid: ${{ secrets.ACCOUNT_SID }}
+          auth_token: ${{ secrets.AUTH_TOKEN }}
+          to_whatsapp_no: ${{ secrets.TO_WHATSAPP_NO }}
