--- a/.github/workflows/whatsapp-push-notify-action.yml
+++ b/.github/workflows/whatsapp-push-notify-action.yml
@@ -9,10 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: install twilio
-        run: pip install twilio
+        run: npm install twilio@4.7.2
       - name: run code
-        run: python main.py
+        run: node main.js
         env:
           account_sid: ${{ secrets.ACCOUNT_SID }}
           auth_token: ${{ secrets.AUTH_TOKEN }}
           to_whatsapp_no: ${{ secrets.TO_WHATSAPP_NO }}
+          from_whatsapp_no: ${{ secrets.FROM_WHATSAPP_NO }}
