--- a/.github/workflows/whatsapp-push-notify-action.yml
+++ b/.github/workflows/whatsapp-push-notify-action.yml
@@ -8,10 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: install dotenv
-        run: npm install dotenv
-      - name: install twilio
-        run: npm install twilio@4.7.2
+      - name: install twilio and dotenv
+        run: npm install twilio@4.7.2 dotenv
       - name: run code
         run: node main.js
         env:
