--- a/.github/workflows/whatsapp-push-notify-action.yml
+++ b/.github/workflows/whatsapp-push-notify-action.yml
@@ -17,3 +17,7 @@ jobs:
           auth_token: ${{ secrets.AUTH_TOKEN }}
           to_whatsapp_no: ${{ secrets.TO_WHATSAPP_NO }}
           from_whatsapp_no: ${{ secrets.FROM_WHATSAPP_NO }}
+          
+      - name : Run
+        run: |
+          echo 'Start!'
