--- a/.github/workflows/whatsapp-push-notify-action.yml
+++ b/.github/workflows/whatsapp-push-notify-action.yml
@@ -8,12 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: install dotenv
-        run: npm install dotenv
       - name: install twilio
-        run: npm install twilio@4.7.2
+        run: pip install twilio
       - name: run code
-        run: node main.js
+        run: python main.py
         env:
           account_sid: ${{ secrets.ACCOUNT_SID }}
           auth_token: ${{ secrets.AUTH_TOKEN }}
